<resources>
    <string name="app_name">assignment05</string>
    <string name="welcome">Welcome !!</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="userinfo">User Info</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="age">Age:</string>
    <string name="country">Country:</string>
    <string name="dob">DoB:</string>
    <string name="n_a">N/A</string>
    <string name="select">Select</string>
    <string name="profile">Profile</string>
    <string name="dob_title">Date of Birth</string>
    <string name="select_dob">Select your date of birth:</string>
    <string name="cancel">Cancel</string>
</resources>