<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/name_profile"
        app:layout_constraintTop_toBottomOf="@+id/name_profile" />

    <TextView
        android:id="@+id/age_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@+id/email_profile"
        app:layout_constraintTop_toBottomOf="@+id/email_profile" />

    <TextView
        android:id="@+id/country_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@+id/age_profile"
        app:layout_constraintTop_toBottomOf="@+id/age_profile" />

    <TextView
        android:id="@+id/dob_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/dob"
        app:layout_constraintStart_toStartOf="@+id/country_profile"
        app:layout_constraintTop_toBottomOf="@+id/country_profile" />

    <TextView
        android:id="@+id/name_display_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/name_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_profile"
        app:layout_constraintTop_toTopOf="@+id/name_profile" />

    <TextView
        android:id="@+id/email_display_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/email_profile"
        app:layout_constraintEnd_toEndOf="@+id/name_display_profile"
        app:layout_constraintStart_toStartOf="@+id/name_display_profile"
        app:layout_constraintTop_toTopOf="@+id/email_profile" />

    <TextView
        android:id="@+id/age_display_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/age_profile"
        app:layout_constraintEnd_toEndOf="@+id/email_display_profile"
        app:layout_constraintStart_toStartOf="@+id/email_display_profile"
        app:layout_constraintTop_toTopOf="@+id/age_profile" />

    <TextView
        android:id="@+id/country_display_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/country_profile"
        app:layout_constraintEnd_toEndOf="@+id/age_display_profile"
        app:layout_constraintStart_toStartOf="@+id/age_display_profile"
        app:layout_constraintTop_toTopOf="@+id/country_profile" />

    <TextView
        android:id="@+id/dob_display_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/dob_profile"
        app:layout_constraintEnd_toEndOf="@+id/country_display_profile"
        app:layout_constraintStart_toStartOf="@+id/country_display_profile"
        app:layout_constraintTop_toTopOf="@+id/dob_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>